# opencv-steam-captcha

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp  classify.cpp  classify.hpp  descriptors.cpp  descriptors.hpp  image.cpp  image.hpp  imagereconstruct.hpp  imagereconstruct_t.hpp  main.cpp  main.hpp  misc.cpp  misc.hpp  segments.cpp  segments.hpp  template_imagereconstruct.hpp
